@@ -7,4 +7,4 @@ if [ -f "$REPO/Makefile" ]; then make -C "$REPO" distclean; fi
 
 PREFIX="$REPO/dest/dev-native"
 
-"$REPO/configure" --prefix="$PREFIX" --enable-tests
+"$REPO/configure" --prefix="$PREFIX" --enable-tests-all
