@@ -1,3 +1,7 @@
+2022-05-23  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Add option to enable tests that require Python
+
 2022-02-10  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Normalize args
